# web_gym

./: .gitignore
backend_python/: pyproject.toml
backend_python/backend_python/: server.py
backend_rust/: Cargo.toml
backend_rust/src/: main.rs
frontend_rust/: Cargo.toml  package-lock.json
frontend_rust/src/: lib.rs
frontend_rust/static/: index.html
