[tool.poetry]
name = "backend-python"
version = "0.1.0"
description = ""
authors = ["itto4869 <itto4869@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
gymnasium = {extras = ["all"], version = "^0.29.1"}
pydantic = "^2.7.3"
numpy = "^1.26.4"
msgpack = "^1.0.8"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
