[package]
name = "web_gym_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.7.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
actix-cors = "0.7.0"
env_logger = "0.11.3"
log = "0.4.21"